# test_elpa

./: CMakeLists.txt  README.md  check.py
src/: read_numpy.cpp
